#42: Introducing book status attribute